<resources>
    <string name="app_name">Cadastro de Tarefas</string>
    <string name="codigo">Código</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="tarefas">Tarefas</string>
    <string name="limpar_campos">Limpar</string>
    <string name="registro_nao_encontrado">Registro não encontrado</string>
    <string name="informe_descricao">Informe a descrição</string>
    <string name="informe_codigo">Informe o código</string>
    <string name="texto_ordenacao">Campo para ordenação</string>
    <string name="usar_ordem_decrescente">Usar ordem decrescente</string>
    <string name="texto_filtro">Descrição começa com</string>
    <string name="filtro">Filtro</string>
    <string name="salvar_tarefa_erro">Não foi possível salvar a tarefa</string>
    <string name="excluir_tarefa_erro">Não foi possível excluir a tarefa</string>
    <string name="prazo">Prazo</string>
    <string name="nova_tarefa">Nova tarefa</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_descricao">Aplicação desenvolvida para fins didáticos na UTFPR</string>
    <string name="ok">OK</string>
    <string name="alterar_tarefa">Alterar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="atencao">Atenção</string>
    <string name="confirmar_excluir">Esse registro será excluído definitivamente</string>
    <string name="codigo_detalhe">Código: %s</string>
    <string name="descricao_detalhe">Descrição: %s</string>
    <string name="prazo_detalhe">Prazo: %s</string>
    <string name="detalhes">Detalhes</string>
    <string name="detalhes_tarefa">Detalhes da Tarefa</string>
    <string name="mostrar_notificacao">Mostrar Notificação</string>
    <string name="ocultar_notificacao">Ocultar notificação</string>
    <string name="id_canal">id_canal</string>
    <string name="nome_canal">Nome do Canal</string>
    <string name="descricao_canal">Descrição do Canal</string>
    <string name="titulo_notificacao">Título da Notificação</string>
    <string name="conteudo_notificacao">Conteúdo da Notificação. Esse texto será truncado para aparecer em apenas uma linha</string>
    <string name="mostrar_token_firebase">Mostrar token Firebase</string>
    <string name="token_firebase">Token Firebase</string>
    <string name="copiar">Copiar</string>
    <string name="token_copiado">Token Copiado</string>
    <string name="nao_gerado">Não gerado</string>
</resources>