<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/codigo_detalhe"
        android:id="@+id/txtCodigo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/descricao_detalhe"
        android:id="@+id/txtDescricao" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/prazo_detalhe"
        android:id="@+id/txtPrazo" />
</LinearLayout>